--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <p>
       Paste <code>0</code>s and <code>1</code>s and render them as a black-and-white image.
     </p>
-    <a href="renderppm.html">➡ Open Binary Image Renderer</a>
+    <a href="renderppm.html">➡ Open Binary Image Renderer2</a>
   </div>
 
 </body>
