--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                         <div class="step-dot active"></div>
                         <h4>Level 1</h4>
                         <span>Pattern Finder</span>
-                        <a href="level1/index.html" class="learn-more-btn">Start Here →</a>
+                        <a href="levels/level1/index.html" class="learn-more-btn">Start Here →</a>
                     </div>
 
                     <div class="step-node locked">
