--- a/levels/level1/index.html
+++ b/levels/level1/index.html
@@ -28,87 +28,126 @@
         <div class="container">
             <span class="level-badge"><i class="fa-solid fa-magnifying-glass"></i> Level 1</span>
             <h1>AI: The Pattern Finder</h1>
-            <p>AI എങ്ങനെയാണ് കാര്യങ്ങൾ പഠിക്കുന്നത്? (How does AI learn patterns?)</p>
+            <p>AI എങ്ങനെയാണ് പാറ്റേണുകൾ മനസ്സിലാക്കുന്നത്? (Understanding Patterns)</p>
             <div class="progress-bar-container">
                 <div class="progress-fill" style="width: 0%"></div>
-                <span class="progress-text">0% Completed</span>
+                <span class="progress-text">Start your journey!</span>
             </div>
         </div>
     </header>
 
-    <main class="container lesson-list-section">
+    <main class="container curriculum-section">
         
-        <div class="lesson-card">
-            <div class="lesson-thumbnail">
-                <img src="https://img.youtube.com/vi/VIDEO_ID/hqdefault.jpg" alt="Video Thumbnail" class="thumb-img">
-                <a href="https://www.youtube.com/watch?v=VIDEO_ID" target="_blank" class="play-btn-overlay"><i class="fa-solid fa-play"></i></a>
-            </div>
-            <div class="lesson-content">
-                <span class="lesson-number">Video 1</span>
-                <h3>AI എന്താണ്? (What is AI?)</h3>
-                <p>AI-യും Robot-ഉം ഒന്നാണോ? Android Kunjappan ഒരു AI ആണോ എന്ന് നോക്കാം.</p>
-                <div class="lesson-actions">
-                    <a href="https://www.youtube.com/watch?v=VIDEO_ID" target="_blank" class="btn btn-primary btn-sm"><i class="fa-solid fa-play"></i> Watch Video</a>
-                    <a href="activities.html#act1" class="btn btn-activity btn-sm"><i class="fa-solid fa-puzzle-piece"></i> Activity</a>
+        <div class="curriculum-card">
+            <div class="card-main">
+                <div class="card-header">
+                    <span class="unit-tag">Unit 1</span>
+                    <h3>AI എന്താണ്? (What is AI?)</h3>
+                    <p>AI-യും Robot-ഉം ഒന്നാണോ? Android Kunjappan ഒരു AI ആണോ? നമുക്ക് നോക്കാം.</p>
                 </div>
+                <div class="video-wrapper">
+                    <img src="https://img.youtube.com/vi/VIDEO_ID_1/maxresdefault.jpg" alt="Video Thumbnail" class="vid-thumb">
+                    <a href="https://www.youtube.com/watch?v=VIDEO_ID_1" target="_blank" class="play-trigger">
+                        <div class="play-circle"><i class="fa-solid fa-play"></i></div>
+                        <span>Watch Video</span>
+                    </a>
+                </div>
+            </div>
+
+            <div class="card-sidebar">
+                <div class="sidebar-header">
+                    <i class="fa-solid fa-flask"></i> Activity Lab
+                </div>
+                <ul class="activity-list">
+                    <li>
+                        <a href="activities/quiz1.html" class="act-link">
+                            <i class="fa-solid fa-clipboard-question icon-purple"></i>
+                            <span><strong>Quick Quiz</strong><br><small>Test your knowledge</small></span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="activities/discussion1.html" class="act-link">
+                            <i class="fa-regular fa-comments icon-blue"></i>
+                            <span><strong>Discussion</strong><br><small>Is 'Android Kunjappan' real AI?</small></span>
+                        </a>
+                    </li>
+                </ul>
             </div>
         </div>
 
-        <div class="lesson-card">
-            <div class="lesson-thumbnail">
-                <img src="https://img.youtube.com/vi/VIDEO_ID/hqdefault.jpg" alt="Video Thumbnail" class="thumb-img">
-                <div class="play-btn-overlay"><i class="fa-solid fa-play"></i></div>
-            </div>
-            <div class="lesson-content">
-                <span class="lesson-number">Video 2</span>
-                <h3>Machine Learning എന്നാൽ എന്ത്?</h3>
-                <p>കമ്പ്യൂട്ടർ എങ്ങനെയാണ് പാറ്റേണുകൾ (Patterns) കണ്ടുപിടിക്കുന്നത്?</p>
-                <div class="lesson-actions">
-                    <a href="#" class="btn btn-primary btn-sm">Watch Video</a>
-                    <a href="activities.html#act2" class="btn btn-activity btn-sm">Activity</a>
+        <div class="curriculum-card">
+            <div class="card-main">
+                <div class="card-header">
+                    <span class="unit-tag">Unit 2</span>
+                    <h3>Machine Learning എന്നാൽ എന്ത്?</h3>
+                    <p>കമ്പ്യൂട്ടറിന് നിയമങ്ങൾ (Rules) പഠിപ്പിക്കുന്നതിനു പകരം ഉദാഹരണങ്ങൾ (Examples) നൽകിയാൽ എന്ത് സംഭവിക്കും?</p>
                 </div>
+                <div class="video-wrapper">
+                    <img src="https://img.youtube.com/vi/VIDEO_ID_2/maxresdefault.jpg" alt="Video Thumbnail" class="vid-thumb">
+                    <a href="https://www.youtube.com/watch?v=VIDEO_ID_2" target="_blank" class="play-trigger">
+                        <div class="play-circle"><i class="fa-solid fa-play"></i></div>
+                        <span>Watch Video</span>
+                    </a>
+                </div>
+            </div>
+
+            <div class="card-sidebar">
+                <div class="sidebar-header">
+                    <i class="fa-solid fa-flask"></i> Activity Lab
+                </div>
+                <ul class="activity-list">
+                    <li>
+                        <a href="#" class="act-link">
+                            <i class="fa-solid fa-gamepad icon-orange"></i>
+                            <span><strong>Game: Pattern Hunt</strong><br><small>Find the hidden pattern</small></span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#" class="act-link">
+                            <i class="fa-solid fa-file-code icon-dark"></i>
+                            <span><strong>Code Look</strong><br><small>Simple Python Example</small></span>
+                        </a>
+                    </li>
+                </ul>
             </div>
         </div>
 
-        <div class="lesson-card">
-            <div class="lesson-thumbnail">
-                <img src="https://img.youtube.com/vi/VIDEO_ID/hqdefault.jpg" alt="Video Thumbnail" class="thumb-img">
-                <div class="play-btn-overlay"><i class="fa-solid fa-play"></i></div>
-            </div>
-            <div class="lesson-content">
-                <span class="lesson-number">Video 3</span>
-                <h3>Data: AI-യുടെ ഭക്ഷണം</h3>
-                <p>നല്ല ഡാറ്റയും ചീത്ത ഡാറ്റയും തമ്മിലുള്ള വ്യത്യാസം.</p>
-                <div class="lesson-actions">
-                    <a href="#" class="btn btn-primary btn-sm">Watch Video</a>
-                    <a href="activities.html#act3" class="btn btn-activity btn-sm">Activity</a>
+        <div class="curriculum-card">
+            <div class="card-main">
+                <div class="card-header">
+                    <span class="unit-tag">Unit 3</span>
+                    <h3>Data: AI-യുടെ ഭക്ഷണം</h3>
+                    <p>നല്ല ഡാറ്റയും ചീത്ത ഡാറ്റയും. എങ്ങനെയാണ് ഡാറ്റ AI-യെ സ്വാധീനിക്കുന്നത്?</p>
                 </div>
+                <div class="video-wrapper">
+                    <img src="https://img.youtube.com/vi/VIDEO_ID_3/maxresdefault.jpg" alt="Video Thumbnail" class="vid-thumb">
+                    <a href="#" class="play-trigger">
+                        <div class="play-circle"><i class="fa-solid fa-play"></i></div>
+                        <span>Watch Video</span>
+                    </a>
+                </div>
+            </div>
+
+            <div class="card-sidebar">
+                <div class="sidebar-header">
+                    <i class="fa-solid fa-flask"></i> Activity Lab
+                </div>
+                <ul class="activity-list">
+                    <li>
+                        <a href="#" class="act-link">
+                            <i class="fa-solid fa-images icon-green"></i>
+                            <span><strong>Data Sorting</strong><br><small>Separate Apple vs Orange</small></span>
+                        </a>
+                    </li>
+                </ul>
             </div>
         </div>
 
-        <div class="lesson-card">
-            <div class="lesson-thumbnail">
-                <img src="https://img.youtube.com/vi/VIDEO_ID/hqdefault.jpg" alt="Video Thumbnail" class="thumb-img">
-                <div class="play-btn-overlay"><i class="fa-solid fa-play"></i></div>
-            </div>
-            <div class="lesson-content">
-                <span class="lesson-number">Video 4</span>
-                <h3>Features & Labels (ആപ്പിളും ഓറഞ്ചും)</h3>
-                <p>AI എങ്ങനെയാണ് സാധനങ്ങളെ തിരിച്ചറിയുന്നത്?</p>
-                <div class="lesson-actions">
-                    <a href="#" class="btn btn-primary btn-sm">Watch Video</a>
-                    <a href="activities.html#act4" class="btn btn-activity btn-sm">Activity</a>
-                </div>
-            </div>
-        </div>
-
-        </main>
+    </main>
 
     <footer class="footer">
         <div class="container">
-            <div class="footer-bottom">
-                <p>&copy; 2024 AI For Kids (Malayalam). Level 1 Completed? <a href="../../level2/index.html">Go to Level 2</a></p>
-            </div>
+            <p>&copy; 2024 AI For Kids (Malayalam).</p>
         </div>
     </footer>
 
